# 3dEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Camera.cpp  Camera.h  Cube.cpp  Cube.h  Importer.cpp  Importer.h  README.md  Scene.cpp  Scene.h  Shader.h  convert.sh  deferred-ssao.cpp  engine  laplacianIt.cpp  laplacianMat.cpp  laplacianSmooth.cpp  laplacianTransform.cpp  main.cpp  makefile  pbr.cpp  refCPU.cpp  refGPU.cpp  skinningCPU.cpp  skinningGPU.cpp
Anim/: Bone.cpp  Bone.h
Axis/: Axis.cpp  Axis.h
Bezier/: Bezier.cpp  Bezier.h  BezierCurve.cpp  BezierCurve.h  BezierSurface.cpp  BezierSurface.h  CMakeLists.txt
Camera/: CMakeLists.txt  Camera.cpp  Camera.h  CameraDualQuaternion.cpp  CameraDualQuaternion.h  CameraRotateAround.cpp  CameraRotateAround.h
Importer/: CMakeLists.txt  Importer.cpp  Importer.h
Inputs/: CMakeLists.txt  Input.cpp  Input.h
Light/: CMakeLists.txt  LightManager.cpp  LightManager.h  PointLight.cpp  PointLight.h
Mesh/: CMakeLists.txt  Mesh.cpp  Mesh.h  MeshEdge.cpp  MeshEdge.h  MeshHalfEdge.cpp  MeshHalfEdge.h  MeshTriangle.cpp  MeshTriangle.h  MeshVertex.cpp  MeshVertex.h
Models/: Cube.cpp  Cube.h
Renderer/: Renderer.cpp  Renderer.h
Scene/: BezierManager.cpp  BezierManager.h  CMakeLists.txt  LightManager.cpp  LightManager.h  MeshManager.cpp  MeshManager.h  Scene.cpp  Scene.h  SceneManager.h
Scene/Axis/: Axis.cpp  Axis.h  CMakeLists.txt
Shaders/: BRDF.frag  BRDF.vert  BRDFDiffuse.frag  BRDFDiffuse.vert  BRDFmicroFacet.frag  CMakeLists.txt  Color.frag  Color.vert  Material.cpp  Material.h  Shader.cpp  Shader.h  TextureBRDF.frag  TextureBRDF.vert  blur.frag  couleur3D.frag  empty.frag  gBufferBlinnPhongGGX.frag  lightingPass.frag  lightingPass.vert  skinning.frag  skinning.vert  ssao.frag  texture.vert
lib/: CMakeLists.txt
